--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.13.7",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
-    "chart.js": "^2.9.4",
     "chartjs-plugin-annotation": "^0.5.7",
-    "react": "^17.0.1",
+    "moment": "^2.29.1",
+    "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^16.14.0",
+    "react-rainbow-components": "^1.24.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
+    "react-with-direction": "^1.3.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
