--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
     "react-rainbow-components": "^1.24.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-toastify": "^7.0.3",
     "react-with-direction": "^1.3.1",
+    "redux": "^4.0.5",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
