--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.13.7",
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "babel-jest": "^26.6.3",
     "chartjs-plugin-annotation": "^0.5.7",
+    "jest": "^26.6.3",
     "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
@@ -17,6 +21,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-test-renderer": "^17.0.1",
     "react-toastify": "^7.0.3",
     "react-with-direction": "^1.3.1",
     "redux": "^4.0.5",
@@ -25,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
