--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.13.7",
@@ -11,9 +12,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "babel-jest": "^26.6.3",
+    "canvas": "^2.7.0",
     "chartjs-plugin-annotation": "^0.5.7",
-    "jest": "^26.6.3",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
@@ -32,6 +34,12 @@
     "build": "react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/src/tests/__mocks__/assetsTransformer.js",
+      "\\.(css|less)$": "<rootDir>/src/tests/__mocks__/assetsTransformer.js"
+    }
   },
   "eslintConfig": {
     "extends": [
