--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,9 @@
 jwtSecret = uclgoshteam162021
+
+PORT = 5000
+
+PGHOST = localhost
+PGUSER = daulet
+PGPASSWORD = Barcateam1
+PGDATABASE = application
+PGPORT = 5432
